--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Flask==2.2.2
 google-auth==2.15.0
 google-auth-oauthlib==0.7.1
 gspread==5.7.2
+gunicorn==20.1.0
 httplib2==0.21.0
 idna==3.4
 itsdangerous==2.1.2
